# SemestralkaPOS

./: CMakeLists.txt  hra.cpp  hra.h  main.cpp  my_socket.cpp  my_socket.h  vzor.cpp  vzor.h
hra/: hra.cpp  hra.h  vzor.cpp  vzor.h
socket/: my_socket.cpp  my_socket.h
utility/: heap_monitor.h  konvertor.cpp  konvertor.h  subor_handler.cpp  subor_handler.h
